--- a/config/main.ini
+++ b/config/main.ini
@@ -1,5 +1,5 @@
 [TRAINING]
-num_epochs = 10
+num_epochs = 3
 batch_size = 512
 eval_every = 20
 learning_rate = 0.001
@@ -13,5 +13,5 @@ model_dir = model_dir
 
 [PARAMS]
 embedding_size = 64
-loss_function = mse
+loss_function = cross_entropy
 filter_sizes = 3
